--- a/StoreFront.UI.MVC/Views/Administration/ListRoles.cshtml
+++ b/StoreFront.UI.MVC/Views/Administration/ListRoles.cshtml
@@ -6,6 +6,10 @@
     ViewData["Title"] = "List Roles";
 }
 
+@section NavBarClass {
+    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
+    }
+
 <h1>Roles</h1>
 
 
