--- a/StoreFront.UI.MVC/Views/Manufacturers/Delete.cshtml
+++ b/StoreFront.UI.MVC/Views/Manufacturers/Delete.cshtml
@@ -3,25 +3,32 @@
 @{
     ViewData["Title"] = "Delete";
 }
+@section NavBarClass {
+    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
+    }
+        <div class="row">
+            <div class="col-8 offset-2">
+                <h1>Delete @Model.ManufacturerName</h1>
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Manufacturer</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ManufacturerName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ManufacturerName)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ManufacturerId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+                <h3>Are you sure you want to delete this?</h3>
+                <h3 class="text-danger">This Action is Permanent!</h3>
+                <div>
+                    <h4>Manufacturer</h4>
+                    <hr />
+                    <dl class="row">
+                        <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.ManufacturerName)
+                        </dt>
+                        <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.ManufacturerName)
+                        </dd>
+                    </dl>
+                    <h3 class="text-danger">This Action is Permanent!</h3>
+                    <form asp-action="Delete">
+                        <input type="hidden" asp-for="ManufacturerId" />
+                        <input type="submit" value="Delete" class="btn btn-danger" /> 
+                        <a asp-action="Index" class="btn btn-info ml-3">Back to List</a>
+                    </form>
+                </div>
+            </div>
+        </div>
