--- a/StoreFront.UI.MVC/Views/Manufacturers/Details.cshtml
+++ b/StoreFront.UI.MVC/Views/Manufacturers/Details.cshtml
@@ -3,22 +3,27 @@
 @{
     ViewData["Title"] = "Details";
 }
+@section NavBarClass {
+    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
+    }
+        <div class="row">
+            <div class="col-8 offset-2">
+                <h1>@Model.ManufacturerName Details</h1>
 
-<h1>Details</h1>
+                <div>
 
-<div>
-    <h4>Manufacturer</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ManufacturerName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ManufacturerName)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.ManufacturerId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+                    <dl class="row">
+                        <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.ManufacturerName)
+                        </dt>
+                        <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.ManufacturerName)
+                        </dd>
+                    </dl>
+                </div>
+                <div>
+                    <a asp-action="Edit" asp-route-id="@Model?.ManufacturerId" class="btn btn-warning">Edit</a> 
+                    <a asp-action="Index" class="btn btn-info ml-3">Back to List</a>
+                </div>
+                </div>
+                </div>
