--- a/StoreFront.UI.MVC/Views/Manufacturers/Edit.cshtml
+++ b/StoreFront.UI.MVC/Views/Manufacturers/Edit.cshtml
@@ -3,32 +3,39 @@
 @{
     ViewData["Title"] = "Edit";
 }
+@section NavBarClass {
+    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
+    }
+        <div class="row">
+            <div class="col-8 offset-2">
 
-<h1>Edit</h1>
+                <h1>Modify @Model.ManufacturerName</h1>
 
-<h4>Manufacturer</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ManufacturerId" />
-            <div class="form-group">
-                <label asp-for="ManufacturerName" class="control-label"></label>
-                <input asp-for="ManufacturerName" class="form-control" />
-                <span asp-validation-for="ManufacturerName" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-md-4">
+                        <form asp-action="Edit">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <input type="hidden" asp-for="ManufacturerId" />
+                            <div class="form-group">
+                                <label asp-for="ManufacturerName" class="control-label"></label>
+                                <input asp-for="ManufacturerName" class="form-control" />
+                                <span asp-validation-for="ManufacturerName" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Save" class="btn btn-warning" />
+                                <a asp-action="Index" class="btn btn-info ml-3">Back to List</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+        </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
