--- a/StoreFront.UI.MVC/Views/Products/Delete.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Delete.cshtml
@@ -3,67 +3,81 @@
 @{
     ViewData["Title"] = "Delete";
 }
+@section NavBarClass {
+    <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
+    }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductPrice)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductPrice)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UnitsInStock)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UnitsInStock)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UnitsOnOrder)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UnitsOnOrder)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Discontinued)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Discontinued)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.CategoryName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Manufacturer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Manufacturer.ManufacturerName)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ProductId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+
+        <div class="row mb-3">
+            <div class="col-md-8 offset-4">
+                <h1>Delete @Model.ProductName</h1>
+                <h2 class="text-danger">This Action Is <strong>Permanent!</strong></h2>
+                <br />
+                <dl class="row">
+                    <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ProductName)
+                    </dt>
+                    <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ProductName)
+                    </dd>
+                    <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ProductDescription)
+                    </dt>
+                    <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ProductDescription)
+                    </dd>
+                    <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ProductPrice)
+                    </dt>
+                    <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ProductPrice)
+                    </dd>
+                    <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.UnitsInStock)
+                    </dt>
+                    <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.UnitsInStock)
+                    </dd>
+                    <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.UnitsOnOrder)
+                    </dt>
+                    <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.UnitsOnOrder)
+                    </dd>
+                    <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Discontinued)
+                    </dt>
+                    <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Discontinued)
+                    </dd>
+                    <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Category)
+                    </dt>
+                    <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Category.CategoryName)
+                    </dd>
+                    <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Manufacturer)
+                    </dt>
+                    <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Manufacturer.ManufacturerName)
+                    </dd>
+                </dl>
+                <h2 class="text-danger">This Action Is <strong>Permanent!</strong></h2>
+                <form asp-action="Delete">
+                    <input type="hidden" asp-for="ProductId" />
+            @if (Model.ProductOrders.Count() == 0)
+            {
+                    <input type="submit" value="Delete" class="btn btn-danger" />
+            }
+            else
+            {
+                    <a disabled="true" class="text-danger" style="text-decoration: line-through;" title="Can't Delete - referenced by other records">Delete</a>
+            }
+
+                
+                <a asp-action="Index" class="btn btn-info ml-3">Back to List</a>
+            </form>
+        </div>
+    </div>
