--- a/StoreFront.UI.MVC/Views/Products/TableView.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/TableView.cshtml
@@ -10,6 +10,7 @@
     }
 
 
+
         <!-- Shop Start -->
         <div class="container-fluid pt-5">
             <div class="row px-xl-5">
@@ -146,42 +147,108 @@
                                 <div>
                                 </div>
                                 <div class="dropdown ml-4">
-                                    <a class="btn border btn-info mr-3" asp-action="TableView">TableView</a>
-                                    <button class="btn border dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
+                            @if (User.IsInRole("Admin"))
+                            {
+                                    <a class="btn border btn-warning mx-3" asp-action="Create">Add Product</a>
+                            }
+                                    <a class="btn border btn-info mr-3" asp-action="Index">TileView</a>
+                                <button class="btn border dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
                                         aria-expanded="false">
-                                        Sort by
-                                    </button>
-                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="triggerId">
-                                        <a class="dropdown-item" href="#">Latest</a>
-                                        <a class="dropdown-item" href="#">Popularity</a>
-                                        <a class="dropdown-item" href="#">Best Rating</a>
-                                    </div>
+                                    Sort by
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="triggerId">
+                                    <a class="dropdown-item" href="#">Latest</a>
+                                    <a class="dropdown-item" href="#">Popularity</a>
+                                    <a class="dropdown-item" href="#">Best Rating</a>
                                 </div>
                             </div>
                         </div>
-                @foreach (var item in Model)
-                {
-                        <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
-                            <div class="card product-item border-0 mb-4">
-                                <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                                    <img class="img-fluid w-100" src="#" alt="">
-                                </div>
-                                <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                                    <h6 class="text-truncate mb-3">@item.ProductName</h6>
-                                    <div class="d-flex justify-content-center">
-                                        <h6>@Html.DisplayFor(modelItem => item.ProductPrice)</h6>
-                                    </div>
-                                </div>
-                                <div class="card-footer d-flex justify-content-between bg-light border">
-                                    <a asp-action="Details" asp-route-id="@item.ProductId" class="btn btn-sm text-dark p-0">
-                                        <i class="fas fa-eye text-primary mr-1"></i>View Detail
-                                    </a>
-                               
-                                    <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
-                                </div>
-                            </div>
-                        </div>
-                }
+                    </div>
+
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>
+                                @Html.DisplayNameFor(model => model.ProductName)
+                                </th>
+
+                                <th>
+                                @Html.DisplayNameFor(model => model.ProductPrice)
+                                </th>
+                                <th>
+                                @Html.DisplayNameFor(model => model.UnitsInStock)
+                                </th>
+                                <th>
+                                @Html.DisplayNameFor(model => model.UnitsOnOrder)
+                                </th>
+                                <th>
+                                @Html.DisplayNameFor(model => model.Discontinued)
+                                </th>
+                                <th>
+                                @Html.DisplayNameFor(model => model.Category)
+                                </th>
+                                <th>
+                                @Html.DisplayNameFor(model => model.Manufacturer)
+                                </th>
+                            @if (User.IsInRole("Admin"))
+                            {
+                                    <th></th>
+                            }
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                        @foreach (var item in Model)
+                        {
+                                <tr>
+                                    <td>
+                                        <a asp-action="Details" asp-route-id="@item.ProductId">@Html.DisplayFor(modelItem => item.ProductName)</a>
+
+                                    </td>
+
+                                    <td>
+                                    @Html.DisplayFor(modelItem => item.ProductPrice)
+                                    </td>
+                                    <td>
+                                    @Html.DisplayFor(modelItem => item.UnitsInStock)
+                                    </td>
+                                    <td>
+                                    @Html.DisplayFor(modelItem => item.UnitsOnOrder)
+                                    </td>
+                                    <td>
+                                    @{
+                                        string lineText = item.Discontinued ? "Yes" : "No";
+                                    }
+                                        <span>@lineText</span>
+                                    @*@Html.DisplayFor(modelItem => item.Discontinued)*@
+                                    </td>
+                                    <td>
+                                    @Html.DisplayFor(modelItem => item.Category.CategoryName)
+                                    </td>
+                                    <td>
+                                    @Html.DisplayFor(modelItem => item.Manufacturer.ManufacturerName)
+                                    </td>
+                                @if (User.IsInRole("Admin"))
+                                {
+
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> <span> | </span>
+
+                                        @if (item.ProductOrders.Count() == 0)
+                                        {
+                                                <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
+                                        }
+                                        else
+                                        {
+                                                <a disabled="true" class="text-danger" style="text-decoration: line-through;" title="Can't Delete - referenced by other records">Delete</a>
+                                        }
+
+                                        </td>
+                                }
+                                </tr>
+                        }
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -211,7 +278,24 @@
 
 
 
-@*    <h1>Index</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@*
+    <h1>TableView</h1>
 
     <p>
     <a asp-action="Create">Create New</a>
@@ -247,11 +331,10 @@
     </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model)
-    {
+    @foreach (var item in Model) {
     <tr>
     <td>
-    <a asp-action="Details" asp-route-id="@item.ProductId">@Html.DisplayFor(modelItem => item.ProductName)</a>
+    @Html.DisplayFor(modelItem => item.ProductName)
     </td>
     <td>
     @Html.DisplayFor(modelItem => item.ProductDescription)
@@ -276,19 +359,11 @@
     </td>
     <td>
     <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
-
-    @if (item.ProductOrders.Count() == 0) //item.OrderProducts retrieves any related records for this product from that table.
-    {
+    <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
     <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
-    }
-    else
-    {
-    <a disabled="true" class="text-danger" style="text-decoration: line-through;" title="Can't Delete - referenced by other records">Delete</a>
-    }
     </td>
     </tr>
     }
     </tbody>
-    </table>*@
-
-
+    </table>
+    *@
